--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nightmare": "^2.10.0"
   },
   "dependencies": {
-    "nightmare": "^2.10.0"
+    "nightmare": "^2.10.0",
+    "vo": "^4.0.2"
   }
 }
