--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nightmare": "^2.10.0"
   },
   "dependencies": {
+    "jquery": "^3.2.1",
     "nightmare": "^2.10.0",
     "nightmare-download-manager": "^0.2.4",
     "vo": "^4.0.2"
