--- a/package.json
+++ b/package.json
@@ -1,14 +1,10 @@
 {
   "name": "ssoscraping",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Look for SSO",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/amrutharamesh/SSOScraping.git"
   },
   "author": "amrutha",
   "license": "ISC",
@@ -16,13 +12,11 @@
     "url": "https://github.com/amrutharamesh/SSOScraping/issues"
   },
   "homepage": "https://github.com/amrutharamesh/SSOScraping#readme",
-  "devDependencies": {
-    "nightmare": "^2.10.0"
-  },
   "dependencies": {
+    "async": "^2.4.0",
     "jquery": "^3.2.1",
     "nightmare": "^2.10.0",
     "nightmare-download-manager": "^0.2.4",
-    "vo": "^4.0.2"
+    "node-getopt": "^0.2.3"
   }
 }
